...
    }
    
    private func createLogoutAlert(action: (() -> ())?) -> UIAlertController {
        let alert = UIAlertController(title: AlertPresenterConstants.logoutTitle,
                                      message: AlertPresenterConstants.logoutMessage,
                                      preferredStyle: .alert)
        alert.view.accessibilityIdentifier = "LogoutAlert"
        let retryAction = UIAlertAction(title: "Да", style: .default) { _ in
            action?()
        }
        
        let cancelAction = UIAlertAction(title: "Нет", style: .default) { _ in
            alert.dismiss(animated: true)
        }
        
        retryAction.accessibilityIdentifier = "LogoutAlertYes"
        cancelAction.accessibilityIdentifier = "LogoutAlertNo"
        alert.addAction(retryAction)
        alert.addAction(cancelAction)
        alert.preferredAction = cancelAction
        return alert
    }
...
