...
        dateStamp.bottomAnchor.constraint(equalTo: contentImage.bottomAnchor, constant: -8).isActive = true
        dateStamp.font = UIFont(name: "SFPro-Regular", size: 13)
        dateStamp.textColor = UIColor.ypWhite
    }
    
    private func createLikeButton() {
        likeButton.accessibilityIdentifier = "LikeButton"
        likeButton.translatesAutoresizingMaskIntoConstraints = false
        likeButton.addTarget(self, action: #selector(didTapLikeButton), for: .touchUpInside)
        contentView.addSubview(likeButton)
        likeButton.widthAnchor.constraint(equalToConstant: 44.0).isActive = true
        likeButton.heightAnchor.constraint(equalToConstant: 44.0).isActive = true
        likeButton.trailingAnchor.constraint(equalTo: contentImage.trailingAnchor).isActive = true
...
